<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PokemonDetailActivity">


    <ImageView
        android:id="@+id/iv_card_pokemon_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/pokemon_item_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_baseline"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_pokemon_picture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_baseline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_backward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_card_pokemon_detail"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_name_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_light"
        tools:text="wartortle"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/iv_pokemon_picture"
        app:layout_constraintTop_toBottomOf="@+id/iv_pokemon_picture" />

    <LinearLayout
        android:id="@+id/ll_types_pokemon_detail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name_pokemon"
        app:layout_constraintTop_toTopOf="@+id/tv_name_pokemon">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/stats"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_pokemon" />

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_hp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_attack"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp" />

    <TextView
        android:id="@+id/tv_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_defense"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_attack" />

    <TextView
        android:id="@+id/tv_special_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_special_attack"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_defense" />

    <TextView
        android:id="@+id/tv_special_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_special_defense"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_special_attack" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/attribute_speed"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_special_defense" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_hp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="500"
        android:min="0"
        android:padding="10dp"
        android:progress="23"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hp"
        app:layout_constraintEnd_toStartOf="@id/tv_value_hp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_hp"
        app:layout_constraintTop_toTopOf="@+id/tv_hp"
        app:layout_constraintVertical_bias="0.0"
        app:trackColor="@color/water_dark"
        app:trackCornerRadius="10dp"
        app:trackThickness="5dp" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="23"
        app:trackThickness="5dp"
        app:indicatorColor="@color/white"
        android:max="500"
        android:min="0"
        android:padding="10dp"
        app:trackCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_attack"
        app:layout_constraintEnd_toStartOf="@id/tv_value_attack"
        app:layout_constraintStart_toEndOf="@+id/tv_attack"
        app:layout_constraintTop_toTopOf="@+id/tv_attack"
        app:trackColor="@color/water_dark" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="23"
        app:trackThickness="5dp"
        app:indicatorColor="@color/white"
        android:max="500"
        android:min="0"
        app:trackCornerRadius="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_defense"
        app:layout_constraintEnd_toStartOf="@id/tv_value_defense"
        app:layout_constraintStart_toEndOf="@+id/tv_defense"
        app:layout_constraintTop_toTopOf="@+id/tv_defense"
        app:trackColor="@color/water_dark" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_special_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="23"
        app:trackThickness="5dp"
        app:indicatorColor="@color/white"
        android:max="500"
        android:min="0"
        app:trackCornerRadius="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_special_attack"
        app:layout_constraintEnd_toStartOf="@id/tv_value_special_attack"
        app:layout_constraintStart_toEndOf="@+id/tv_special_attack"
        app:layout_constraintTop_toTopOf="@+id/tv_special_attack"
        app:trackColor="@color/water_dark" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_special_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="23"
        app:trackThickness="5dp"
        app:indicatorColor="@color/white"
        android:max="500"
        android:min="0"
        app:trackCornerRadius="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_special_defense"
        app:layout_constraintEnd_toStartOf="@id/tv_value_special_defense"
        app:layout_constraintStart_toEndOf="@+id/tv_special_defense"
        app:layout_constraintTop_toTopOf="@+id/tv_special_defense"
        app:trackColor="@color/water_dark" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lp_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="23"
        app:trackThickness="5dp"
        app:trackCornerRadius="10dp"
        app:indicatorColor="@color/white"
        android:max="500"
        android:min="0"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_speed"
        app:layout_constraintEnd_toStartOf="@id/tv_value_speed"
        app:layout_constraintStart_toEndOf="@+id/tv_speed"
        app:layout_constraintTop_toTopOf="@+id/tv_speed"
        app:trackColor="@color/water_dark" />

    <TextView
        android:id="@+id/tv_value_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_hp"
        app:layout_constraintEnd_toEndOf="@id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_hp" />

    <TextView
        android:id="@+id/tv_value_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_attack"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_attack" />

    <TextView
        android:id="@+id/tv_value_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_defense"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_defense" />

    <TextView
        android:id="@+id/tv_value_special_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_special_attack"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_special_attack" />

    <TextView
        android:id="@+id/tv_value_special_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_special_defense"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_special_defense" />

    <TextView
        android:id="@+id/tv_value_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_speed"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_pokemon_detail"
        app:layout_constraintTop_toTopOf="@+id/lp_speed" />


</androidx.constraintlayout.widget.ConstraintLayout>